--- a/account/templates/account/coins.html
+++ b/account/templates/account/coins.html
@@ -11,62 +11,62 @@
       <form method=post action="/account/coins/">
         {% csrf_token %}
         <div class="card-columns">
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin">
-            <input type="hidden" name="bitcoin" value="false">
+          <div class="card coin-card {% if 'bitcoin' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Bitcoin">
+            <input type="hidden" name="bitcoin" value="{% if 'bitcoin' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/bitcoin.png' %}" alt="Bitcoin" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Bitcoin Cash">
-            <input type="hidden" name="bitcoin_cash" value="false">
+          <div class="card coin-card {% if 'bitcoin_cash' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Bitcoin Cash">
+            <input type="hidden" name="bitcoin_cash" value="{% if 'bitcoin_cash' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/bitcoin_cash.png' %}" alt="Bitcoin Cash" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Dash">
-            <input type="hidden" name="dash" value="false">
+          <div class="card coin-card {% if 'dash' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Dash">
+            <input type="hidden" name="dash" value="{% if 'dash' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/dash.png' %}" alt="Dash" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum">
-            <input type="hidden" name="ethereum" value="false">
+          <div class="card coin-card {% if 'ethereum' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Ethereum">
+            <input type="hidden" name="ethereum" value="{% if 'ethereum' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/ethereum.png' %}" alt="Ethereum" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ethereum Classic">
-            <input type="hidden" name="ethereum_classic" value="false">
+          <div class="card coin-card {% if 'ethereum_classic' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Ethereum Classic">
+            <input type="hidden" name="ethereum_classic" value="{% if 'ethereum_classic' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/ethereum_classic.png' %}" alt="Ethereum Classic" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Litecoin">
-            <input type="hidden" name="litecoin" value="false">
+          <div class="card coin-card {% if 'litecoin' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Litecoin">
+            <input type="hidden" name="litecoin" value="{% if 'litecoin' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/litecoin.png' %}" alt="Litecoin" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Monero">
-            <input type="hidden" name="monero" value="false">
+          <div class="card coin-card {% if 'monero' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Monero">
+            <input type="hidden" name="monero" value="{% if 'monero' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/monero.png' %}" alt="Monero" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="NEO">
-            <input type="hidden" name="neo" value="false">
+          <div class="card coin-card {% if 'neo' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="NEO">
+            <input type="hidden" name="neo" value="{% if 'neo' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/neo.png' %}" alt="NEO" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Ripple">
-            <input type="hidden" name="ripple" value="false">
+          <div class="card coin-card {% if 'ripple' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Ripple">
+            <input type="hidden" name="ripple" value="{% if 'ripple' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/ripple.png' %}" alt="Ripple" width="100">
             </div>
           </div>
-          <div class="card coin-card" data-toggle="tooltip" data-placement="bottom" title="Zcash">
-            <input type="hidden" name="zcash" value="false">
+          <div class="card coin-card {% if 'zcash' in selected_coins %}border-success{% endif %}" data-toggle="tooltip" data-placement="bottom" title="Zcash">
+            <input type="hidden" name="zcash" value="{% if 'zcash' in selected_coins %}true{% else %}false{% endif %}">
             <div class="card-body text-center">
               <img src="{% static 'account/img/coins/zcash.png' %}" alt="Zcash" width="100">
             </div>
