--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Change Email</h3>
-          <form action="#" method="POST">
+          <form name="email" action="/account/settings/" method="POST">
             {% csrf_token %}
             <div class="form-group">
               <label for="currentEmail">Current email address</label>
@@ -25,19 +25,47 @@
         </div>
         <div class="col-md-6">
           <h3>Change Password</h3>
-          <form action="#" method="POST">
+          <form name="password" action="/account/password/" method="POST">
             {% csrf_token %}
+
+            {% if password_form.non_field_errors %}
+              <div class="alert alert-danger" role="alert">
+                {{ password_form.non_field_errors|striptags }}
+              </div>
+            {% endif %}
+
             <div class="form-group">
-              <label for="password">Current password</label>
-              <input type="password" name="password" class="form-control short-field">
+              <label for="password">Old password</label>
+              <input type="password" name="old_password" class="form-control short-field">
+              {% if form.old_password.errors %}
+                <div class="text-danger">
+                  {% for error in form.old_password.errors %}
+                    {{ error|escape }}
+                  {% endfor %}
+                </div>
+              {% endif %}
             </div>
             <div class="form-group">
               <label for="password1">New password</label>
-              <input type="password" name="password1" class="form-control short-field">
+              <input type="password" name="new_password1" class="form-control short-field">
+              {% if form.new_password1.errors %}
+                <div class="text-danger">
+                  {% for error in form.new_password1.errors %}
+                    {{ error|escape }}
+                  {% endfor %}
+                </div>
+              {% endif %}
             </div>
             <div class="form-group">
               <label for="password2">Confirm password</label>
-              <input type="password" name="password2" class="form-control short-field">
+              <input type="password" name="new_password2" class="form-control short-field">
+              {% if form.new_password2.errors %}
+                <div class="text-danger">
+                  {% for error in form.new_password2.errors %}
+                    {{ error|escape }}
+                  {% endfor %}
+                </div>
+              {% endif %}
             </div>
             <button class="btn btn-primary" type="submit">Submit</button>
           </form>
@@ -46,7 +74,7 @@
       <hr>
       <h3>Close Account</h3>
       <p>We're sorry to see you go. This action is non-reversable and permanently closes your account with Polyledger.</p>
-      <form action="#" method="POST">
+      <form name="close_account" action="/account/settings/" method="POST">
         {% csrf_token %}
         <button typ="submit" class="btn btn-danger">Close Account</button>
       </form>
